poke/testsuite/poke.pkl/sref-diag-1.pk
/* { dg-do compile } */

deftype Foo =
  struct
  {
    defvar n = 10;
    int c;
  };

defvar n = (Foo{}).n; /* { dg-error "exist" } */
